--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
 # requirements.txt
 
-# Framework de base pour le RAG
-langchain
-langchain-community
+# Framework de base (exige Pydantic V2)
+langchain>=1.0.0
+langchain-community>=0.2.0
+langchain-text-splitters>=0.2.0
 
-# Pour lire les PDFs
+# Base vectorielle (version compatible Pydantic V2)
+chromadb>=0.5.0
+
+# Pydantic (la V2, pour satisfaire tout le monde)
+pydantic>=2.7.0
+
+# Le reste
 pypdf
-
-# Le modèle d'Embeddings (pour vectoriser le texte)
-# On utilise un modèle open-source performant
 sentence-transformers
 langchain-huggingface
-
-# Notre base de données vectorielle locale
-chromadb
-
-# Utile pour gérer les variables d'environnement (clés API, etc.)
 python-dotenv
