--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,23 @@
 # requirements.txt
 
 # Framework de base (exige Pydantic V2)
-langchain>=1.0.0
-langchain-community>=0.2.0
-langchain-text-splitters>=0.2.0
+ibm-watsonx-ai==1.1.2
+llama-index==0.11.8
+llama-index-core==0.11.8
+llama-index-llms-ibm==0.2.0
+llama-index-embeddings-ibm==0.2.0
+llama-index-readers-web==0.2.2
+llama-hub==0.0.79.post1
+requests==2.32.2
+gradio==4.44.1
 
 # Base vectorielle (version compatible Pydantic V2)
 chromadb>=0.5.0
 
-# Pydantic (la V2, pour satisfaire tout le monde)
-pydantic>=2.7.0
-
-
+# Pydantic 
+pydantic==2.10.6
 
 # Le reste
 pypdf
-sentence-transformers
-langchain-huggingface
 python-dotenv
+
