--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,16 @@
-# requirements.txt
+# Le coeur du système
+llama-index-core
 
-# Framework de base (exige Pydantic V2)
-llama-index>=0.12.0
-llama-index-core>=0.12.0
-llama-index-llms-ibm>=0.2.0
-llama-index-embeddings-ibm>=0.2.0
-llama-index-readers-web>=0.2.2
-llama-index-vector-stores-pinecone>=0.2.0
+# Les nouvelles librairies Google (celles qui marchent)
+llama-index-llms-google-genai
+llama-index-embeddings-google-genai
 
-# Base vectorielle (version compatible Pydantic V2)
-chromadb>=0.5.0
+# La base de données
+llama-index-vector-stores-qdrant
+qdrant-client
 
-# Pydantic 
-pydantic>=2.7.0
-
-#  Autres utilitaires 
-pypdf>=4.0.0
-python-dotenv>=1.0.0
-requests>=2.32.0
-
-# Outils de développement
-pytest>=8.0.0
-black>=24.0.0
-flake8>=7.0.0
+# Outils
+python-dotenv
+pypdf
+fastapi
+uvicorn
